Fix a superfluous scrollbar issue on replay list

--- a/hsreplaynet/static/styles/my_replays.scss
+++ b/hsreplaynet/static/styles/my_replays.scss
@@ -11,7 +11,11 @@
 	width: calc(100% - 300px);
 	padding: 10px;
 
-	@media(max-width: 992px) {
+	.row {
+		margin-right: 0;
+	}
+
+	@media (max-width: 992px) {
 		width: 100%;
 	}
 }
